--- a/games/8/index.html
+++ b/games/8/index.html
@@ -103,7 +103,7 @@
       <h1>4Connect</h1>
       <p id="instructions">
         This board contains 4 groups of 4 related CSS elements or terms. Your goal is to connect those 
-        terms in fewer than 4 attemps.
+        terms in fewer than 4 attempts.
       </p>
 
       <article id="game-main">
