--- a/comics/235/index.html
+++ b/comics/235/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #235: Groundhog Day</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #235: Groundhog Day" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/235" />
+    <meta property="og:image" content="https://comicss.art/comics/235/thumb.png" />
+    <meta property="og:description" content="Illustration of a groundhog in kawaii style with the text 'If Phils sees his shadow... six more Tailwind classes!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/235">
+    <meta name="twitter:title" content="comiCSS #235: Groundhog Day">
+    <meta name="twitter:description" content="Illustration of a groundhog in kawaii style with the text 'If Phils sees his shadow... six more Tailwind classes!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/235/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/235" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -97,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Biblically Accurate CSS</h1>
+      <h1>Groundhog Day</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/235" rel="prev">
+        <a href="/comics/234" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/134">
+        <a class="random-post" href="/comics/113">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/236" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,8 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="The new CSS logo (a purple square with rounded corners and the letters CSS at the bottom right) with 6 wings and 11 eyes.">
-        <img src="/comics/236/236-accurate-css-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="Illustration of a groundhog in kawaii style with the text 'If Phils sees his shadow... six more Tailwind classes!'">
+        <img src="/comics/235/235-groundhog-day-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/235" rel="prev">
+        <a href="/comics/234" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/219">
+        <a class="random-post" href="/comics/32">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -165,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/236" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -179,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/236">https://comicss.art/comics/236</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/236/accurate-css.png">https://comicss.art/comics/236/accurate-css.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/236/accurate-css.html" rel="alternate">https://comicss.art/comics/236/accurate-css.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/235">https://comicss.art/comics/235</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/235/groundhog-day.png">https://comicss.art/comics/235/groundhog-day.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/235/groundhog-day.html" rel="alternate">https://comicss.art/comics/235/groundhog-day.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2026-02-07"></script>
+    <script>let postId = 235;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
