--- a/comics/236/index.html
+++ b/comics/236/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #236: Biblically Accurate CSS</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #236: Biblically Accurate CSS" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/236" />
+    <meta property="og:image" content="https://comicss.art/comics/236/thumb.png" />
+    <meta property="og:description" content="The new CSS logo (a purple square with rounded corners and the letters CSS at the bottom right) with 6 wings and 11 eyes." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/236">
+    <meta name="twitter:title" content="comiCSS #236: Biblically Accurate CSS">
+    <meta name="twitter:description" content="The new CSS logo (a purple square with rounded corners and the letters CSS at the bottom right) with 6 wings and 11 eyes.">
+    <meta name="twitter:image" content="https://comicss.art/comics/236/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/236" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/237" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="The new CSS logo (a purple square with rounded corners and the letters CSS at the bottom right) with 6 wings and 11 eyes.">
+      <div id="comic-strip" role="img" class="vertical" aria-label="The new CSS logo (a purple square with rounded corners and the letters CSS at the bottom right) with 6 wings and 11 eyes.">
         <img src="/comics/236/236-accurate-css-0.webp" alt="" width="350" />
       </div>
 
@@ -165,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/237" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -179,8 +178,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/236">https://comicss.art/comics/236</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/236/accurate-css.png">https://comicss.art/comics/236/accurate-css.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/236">https://comicss.art/comics/236</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/236/accurate-css.png">https://comicss.art/comics/236/accurate-css.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/236/accurate-css.html" rel="alternate">https://comicss.art/comics/236/accurate-css.html</a></p>
 
       <hr />
@@ -219,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2026-02-07"></script>
+    <script>let postId = 236;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
