new comic: css gnomes

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Comics in CSS</h1>
+      <h1>CSS Gnomes</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/236" rel="prev">
+        <a href="/comics/237" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/139">
+        <a class="random-post" href="/comics/77">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,11 +140,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="cartoon with 4 panels in a 2x2 grid showing two people talking. One says 'I am coding a new comic with CSS' The other one replies surprised 'Why with CSS? Won't it look terrible?' and the first one comes back with 'It probably will. But, who cares? Have you seen what's out there now?' Then both smile big while looking outside towards the reader.">
-        <img src="/comics/237/237-comics-in-css-0.webp" alt="" width="350" />
-        <img src="/comics/237/237-comics-in-css-1.webp" alt="" width="350" />
-        <img src="/comics/237/237-comics-in-css-2.webp" alt="" width="350" />
-        <img src="/comics/237/237-comics-in-css-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="Drawing of two group of angry-looking gnomes arguing with each other. One side has hats with circles, the other side has hats with lines and they 'fight' about circles or lines. One of the gnomes with lined hat, his lines are not straight but slightly curved. The drawing has the text 'Little did the CSS gnomes know, there was a spy among them...'">
+        <img src="/comics/238/238-css-gnomes-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -154,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/236" rel="prev">
+        <a href="/comics/237" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/157">
+        <a class="random-post" href="/comics/170">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -182,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/237">https://comicss.art/comics/237</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/237/comics-in-css.png">https://comicss.art/comics/237/comics-in-css.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/237/comics-in-css.html" rel="alternate">https://comicss.art/comics/237/comics-in-css.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/238">https://comicss.art/comics/238</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/238/css-gnomes.png">https://comicss.art/comics/238/css-gnomes.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/238/css-gnomes.html" rel="alternate">https://comicss.art/comics/238/css-gnomes.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,7 +220,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2026-02-07"></script>
+    <script src="/js/data.js?last-updated=2026-02-15"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
