--- a/comics/238/index.html
+++ b/comics/238/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #237: Comics in CSS</title>
+    <title>comiCSS #238: CSS Gnomes</title>
 
-    <meta property="og:title" content="comiCSS #237: Comics in CSS" />
+    <meta property="og:title" content="comiCSS #238: CSS Gnomes" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/237" />
-    <meta property="og:image" content="https://comicss.art/comics/237/thumb.png" />
-    <meta property="og:description" content="cartoon with 4 panels in a 2x2 grid showing two people talking. One says 'I am coding a new comic with CSS' The other one replies surprised 'Why with CSS? Won't it look terrible?' and the first one comes back with 'It probably will. But, who cares? Have you seen what's out there now?' Then both smile big while looking outside towards the reader." />
+    <meta property="og:url" content="https://comicss.art/comics/238" />
+    <meta property="og:image" content="https://comicss.art/comics/238/thumb.png" />
+    <meta property="og:description" content="Drawing of two group of angry-looking gnomes arguing with each other. One side has hats with circles, the other side has hats with lines and they 'fight' about circles or lines. One of the gnomes with lined hat, his lines are not straight but slightly curved. The drawing has the text 'Little did the CSS gnomes know, there was a spy among them...'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/237">
-    <meta name="twitter:title" content="comiCSS #237: Comics in CSS">
-    <meta name="twitter:description" content="cartoon with 4 panels in a 2x2 grid showing two people talking. One says 'I am coding a new comic with CSS' The other one replies surprised 'Why with CSS? Won't it look terrible?' and the first one comes back with 'It probably will. But, who cares? Have you seen what's out there now?' Then both smile big while looking outside towards the reader.">
-    <meta name="twitter:image" content="https://comicss.art/comics/237/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/238">
+    <meta name="twitter:title" content="comiCSS #238: CSS Gnomes">
+    <meta name="twitter:description" content="Drawing of two group of angry-looking gnomes arguing with each other. One side has hats with circles, the other side has hats with lines and they 'fight' about circles or lines. One of the gnomes with lined hat, his lines are not straight but slightly curved. The drawing has the text 'Little did the CSS gnomes know, there was a spy among them...'">
+    <meta name="twitter:image" content="https://comicss.art/comics/238/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/237" />
+    <link rel="canonical" href="https://comicss.art/comics/238" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Comics in CSS</h1>
+      <h1>CSS Gnomes</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/236" rel="prev">
+        <a href="/comics/237" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/139">
+        <a class="random-post" href="/comics/77">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/238" rel="next">
+        <a href="/comics/239" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="cartoon with 4 panels in a 2x2 grid showing two people talking. One says 'I am coding a new comic with CSS' The other one replies surprised 'Why with CSS? Won't it look terrible?' and the first one comes back with 'It probably will. But, who cares? Have you seen what's out there now?' Then both smile big while looking outside towards the reader.">
-        <img src="/comics/237/237-comics-in-css-0.webp" alt="" width="350" />
-        <img src="/comics/237/237-comics-in-css-1.webp" alt="" width="350" />
-        <img src="/comics/237/237-comics-in-css-2.webp" alt="" width="350" />
-        <img src="/comics/237/237-comics-in-css-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="Drawing of two group of angry-looking gnomes arguing with each other. One side has hats with circles, the other side has hats with lines and they 'fight' about circles or lines. One of the gnomes with lined hat, his lines are not straight but slightly curved. The drawing has the text 'Little did the CSS gnomes know, there was a spy among them...'">
+        <img src="/comics/238/238-css-gnomes-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/236" rel="prev">
+        <a href="/comics/237" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/157">
+        <a class="random-post" href="/comics/170">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/238" rel="next">
+        <a href="/comics/239" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/237">https://comicss.art/comics/237</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/237/comics-in-css.png">https://comicss.art/comics/237/comics-in-css.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/237/comics-in-css.html" rel="alternate">https://comicss.art/comics/237/comics-in-css.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/238">https://comicss.art/comics/238</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/238/css-gnomes.png">https://comicss.art/comics/238/css-gnomes.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/238/css-gnomes.html" rel="alternate">https://comicss.art/comics/238/css-gnomes.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +218,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 237;</script>
+    <script>let postId = 238;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
