new cartoon: 10000 steps

--- a/comics/239/index.html
+++ b/comics/239/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #238: CSS Gnomes</title>
+    <title>comiCSS #239: 10,000 Steps</title>
 
-    <meta property="og:title" content="comiCSS #238: CSS Gnomes" />
+    <meta property="og:title" content="comiCSS #239: 10,000 Steps" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/238" />
-    <meta property="og:image" content="https://comicss.art/comics/238/thumb.png" />
-    <meta property="og:description" content="Drawing of two group of angry-looking gnomes arguing with each other. One side has hats with circles, the other side has hats with lines and they 'fight' about circles or lines. One of the gnomes with lined hat, his lines are not straight but slightly curved. The drawing has the text 'Little did the CSS gnomes know, there was a spy among them...'" />
+    <meta property="og:url" content="https://comicss.art/comics/239" />
+    <meta property="og:image" content="https://comicss.art/comics/239/thumb.png" />
+    <meta property="og:description" content="comic with 4 panels in a 2x2 grid showing a sleepy CSS logo yawning and saying '5:30am! Time to rise and shine and exercise', the there's some CSS code: 'animation: 1s exercise steps(10000, end);', then the CSS logo looks like running and the last panel is a close up of the podometer: 10000 steps, no minutes of exercise, and it is 5:31am." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/238">
-    <meta name="twitter:title" content="comiCSS #238: CSS Gnomes">
-    <meta name="twitter:description" content="Drawing of two group of angry-looking gnomes arguing with each other. One side has hats with circles, the other side has hats with lines and they 'fight' about circles or lines. One of the gnomes with lined hat, his lines are not straight but slightly curved. The drawing has the text 'Little did the CSS gnomes know, there was a spy among them...'">
-    <meta name="twitter:image" content="https://comicss.art/comics/238/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/239">
+    <meta name="twitter:title" content="comiCSS #239: 10,000 Steps">
+    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid showing a sleepy CSS logo yawning and saying '5:30am! Time to rise and shine and exercise', the there's some CSS code: 'animation: 1s exercise steps(10000, end);', then the CSS logo looks like running and the last panel is a close up of the podometer: 10000 steps, no minutes of exercise, and it is 5:31am.">
+    <meta name="twitter:image" content="https://comicss.art/comics/239/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/238" />
+    <link rel="canonical" href="https://comicss.art/comics/239" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>CSS Gnomes</h1>
+      <h1>10,000 Steps</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/237" rel="prev">
+        <a href="/comics/238" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/77">
+        <a class="random-post" href="/comics/239">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/239" rel="next">
+        <a href="/comics/240" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="Drawing of two group of angry-looking gnomes arguing with each other. One side has hats with circles, the other side has hats with lines and they 'fight' about circles or lines. One of the gnomes with lined hat, his lines are not straight but slightly curved. The drawing has the text 'Little did the CSS gnomes know, there was a spy among them...'">
-        <img src="/comics/238/238-css-gnomes-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid showing a sleepy CSS logo yawning and saying '5:30am! Time to rise and shine and exercise', the there's some CSS code: 'animation: 1s exercise steps(10000, end);', then the CSS logo looks like running and the last panel is a close up of the podometer: 10000 steps, no minutes of exercise, and it is 5:31am.">
+        <img src="/comics/239/239-10000-steps-0.webp" alt="" width="350" />
+        <img src="/comics/239/239-10000-steps-1.webp" alt="" width="350" />
+        <img src="/comics/239/239-10000-steps-2.webp" alt="" width="350" />
+        <img src="/comics/239/239-10000-steps-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,13 +153,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/237" rel="prev">
+        <a href="/comics/238" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/170">
+        <a class="random-post" href="/comics/15">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -164,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/239" rel="next">
+        <a href="/comics/240" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/238">https://comicss.art/comics/238</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/238/css-gnomes.png">https://comicss.art/comics/238/css-gnomes.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/238/css-gnomes.html" rel="alternate">https://comicss.art/comics/238/css-gnomes.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/239">https://comicss.art/comics/239</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/239/10000-steps.png">https://comicss.art/comics/239/10000-steps.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/239/10000-steps.html" rel="alternate">https://comicss.art/comics/239/10000-steps.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +221,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 238;</script>
+    <script>let postId = 239;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
